# BannedFuncDetector

./: .gitignore  AGENTS.md  BannedFuncDetector.py  CHANGELOG.md  README.md  analyzers.py  bandit.yaml  config.json  config.py  decompilers.py  detector.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  utils.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/bannedfuncdetector/: __init__.py  __main__.py  analyzer_exceptions.py  analyzer_factories.py  bannedfunc.py  cli.py  cli_bootstrap.py  cli_dispatch.py  constants.py  factories.py  file_detection.py  runtime_factories.py
src/bannedfuncdetector/application/: __init__.py  analysis_error.py  analysis_outcome.py  analysis_runtime.py  directory_scanner.py  dto_mappers.py  function_detection_runtime.py  function_detection_support.py  parallel_analyzer.py  result_serializers.py  types.py
src/bannedfuncdetector/application/binary_analyzer/: __init__.py  binary_flow_runtime.py  core.py  detection.py  detection_execution.py  function_analysis.py  function_discovery_service.py  operations.py  reporting.py  runtime.py  selection.py  service.py  session_setup.py
src/bannedfuncdetector/application/contracts/: __init__.py  analysis.py
src/bannedfuncdetector/application/internal/: __init__.py  directory_boundary.py  directory_execution.py  directory_preparation.py  directory_results.py  directory_runners.py  directory_workers.py  execution_plans.py
src/bannedfuncdetector/domain/: __init__.py  banned_functions.py  config_types.py  entities.py  error_types.py  protocols.py  result.py  types.py
src/bannedfuncdetector/infrastructure/: __init__.py  config_models.py  config_repository.py  config_storage.py  config_validation.py  error_handling.py  file_detection.py  validators.py
src/bannedfuncdetector/infrastructure/adapters/: __init__.py  dtos.py  r2_client.py  r2_session.py  r2ai_server.py
src/bannedfuncdetector/infrastructure/decompilers/: __init__.py  availability.py  base_decompiler.py  cascade.py  decai_decompiler.py  decompiler_availability.py  decompiler_support.py  decompiler_types.py  default_decompiler.py  orchestrator.py  orchestrator_dispatch.py  orchestrator_progress.py  orchestrator_runtime.py  orchestrator_search.py  orchestrator_service.py  r2dec_decompiler.py  r2ghidra_decompiler.py  registry.py  selector.py
src/bannedfuncdetector/presentation/: __init__.py  error_formatting.py  reporting.py
tests/: conftest.py  test_analyzers.py  test_analyzers_compat.py  test_config.py  test_coverage_app_internals.py  test_coverage_domain_app.py  test_coverage_final.py  test_coverage_infrastructure.py  test_decai_decompiler.py  test_decompiler_registry.py  test_decompiler_selector.py  test_decompilers.py  test_dependency_injection.py  test_domain_coverage.py  test_file_infra_coverage.py  test_infrastructure_coverage.py  test_main.py  test_parallel_analyzer.py  test_r2dec_decompiler.py  test_reporting.py  test_utils.py
