[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bannedfuncdetector"
version = "2.0.0"
description = "Detects banned/insecure functions in binary files using radare2 decompilers."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"
authors = [
    {name = "Marc Rivero López", email = "mriverolopez@gmail.com"}
]
maintainers = [
    {name = "Marc Rivero López", email = "mriverolopez@gmail.com"}
]
keywords = [
    "security",
    "binary-analysis",
    "radare2",
    "decompiler",
    "banned-functions",
    "vulnerability-detection",
    "malware-analysis",
    "reverse-engineering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Typing :: Typed"
]
dependencies = [
    "r2pipe>=1.9.6",
    "python-magic>=0.4.27",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/seifreed/BannedFuncDetector"
Repository = "https://github.com/seifreed/BannedFuncDetector"
Issues = "https://github.com/seifreed/BannedFuncDetector/issues"
Documentation = "https://github.com/seifreed/BannedFuncDetector#readme"

[project.scripts]
bannedfunc = "bannedfuncdetector.bannedfunc:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = "^(venv|tests|__pycache__|output|saved)/"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.bandit]
exclude_dirs = ["venv", "tests", "__pycache__", "output", "saved", ".git"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
