[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bannedfuncdetector"
dynamic = ["version"]
description = "Detects banned/insecure functions in binary files using radare2 decompilers."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.13"
authors = [
    {name = "Marc Rivero López", email = "mriverolopez@gmail.com"}
]
maintainers = [
    {name = "Marc Rivero López", email = "mriverolopez@gmail.com"}
]
keywords = [
    "security",
    "binary-analysis",
    "radare2",
    "decompiler",
    "banned-functions",
    "vulnerability-detection",
    "malware-analysis",
    "reverse-engineering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Typing :: Typed"
]
dependencies = [
    "r2pipe>=1.9.6",
    "python-magic>=0.4.27; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/seifreed/BannedFuncDetector"
Repository = "https://github.com/seifreed/BannedFuncDetector"
Issues = "https://github.com/seifreed/BannedFuncDetector/issues"
Documentation = "https://github.com/seifreed/BannedFuncDetector#readme"

[project.scripts]
bannedfunc = "bannedfuncdetector.bannedfunc:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
exclude = "^(build|dist|venv|tests|__pycache__|output|saved)/"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.ruff]
exclude = [".github"]

[tool.bandit]
exclude_dirs = ["venv", "tests", "__pycache__", "output", "saved", ".git"]
# B404: import subprocess — the tool needs subprocess to run radare2 and r2ai-server.
# B603: subprocess without shell — all subprocess calls are validated against an
#       explicit allowlist (ALLOWED_EXECUTABLES, ALLOWED_REQUIREMENT_EXECUTABLES)
#       via _validate_executable() before execution.
skips = ["B404", "B603"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short --cov=. --cov-report=term-missing --cov-fail-under=0 --timeout=300"
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools_scm]
# Version is derived from git tags (e.g. v2.1.0 → 2.1.0).
# Run "git tag v2.1.0 && git push --tags" to trigger a release.
